fixes for refresh data query